--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "type-check": "npx tsc --noEmit"
+    "type-check": "npx tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@expo/metro-config": "^54.0.4",
@@ -25,10 +28,35 @@
     "react-native-vector-icons": "^10.3.0"
   },
   "private": true,
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.(ts|tsx|js|jsx)",
+      "**/*.(test|spec).(ts|tsx|js|jsx)"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/**/*.d.ts",
+      "!src/**/index.ts"
+    ]
+  },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/react": "^19.1.13",
     "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.4.4",
     "typescript": "^5.9.2"
   }
 }
