--- a/amplify.yml
+++ b/amplify.yml
@@ -1,34 +1,34 @@
 version: 1
 applications:
-  - frontend:
+  - appRoot: frontend
+    frontend:
       phases:
         preBuild:
           commands:
-            - cd frontend
             - npm install
         build:
           commands:
             - npm run web
       artifacts:
-        baseDirectory: frontend/web-build
+        baseDirectory: web-build
         files:
           - '**/*'
       cache:
         paths:
-          - frontend/node_modules/**/*
-  - backend:
+          - node_modules/**/*
+  - appRoot: backend
+    backend:
       phases:
         preBuild:
           commands:
-            - cd backend
             - npm install
         build:
           commands:
-            - echo "Backend build complete"
+            - npm start
       artifacts:
-        baseDirectory: backend
+        baseDirectory: .
         files:
           - '**/*'
       cache:
         paths:
-          - backend/node_modules/**/*
+          - node_modules/**/*
