--- a/amplify.yml
+++ b/amplify.yml
@@ -1,32 +1,29 @@
 version: 1
 applications:
-  - appRoot: frontend
+  - appRoot: .
     frontend:
       phases:
         preBuild:
           commands:
-            - npm install
+            - echo "Installing Docker Compose"
+            - curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
+            - chmod +x /usr/local/bin/docker-compose
+            - docker --version
+            - docker-compose --version
         build:
           commands:
-            - npm run web
-      artifacts:
-        baseDirectory: web-build
-        files:
-          - '**/*'
-      cache:
-        paths:
-          - node_modules/**/*
-  - appRoot: backend
-    backend:
-      phases:
-        preBuild:
+            - echo "Building with Docker Compose"
+            - docker-compose -f docker-compose.prod.yml build
+            - echo "Starting services"
+            - docker-compose -f docker-compose.prod.yml up -d
+            - echo "Extracting frontend build"
+            - docker cp $(docker-compose -f docker-compose.prod.yml ps -q frontend):/usr/share/nginx/html ./dist
+        postBuild:
           commands:
-            - npm install
-        build:
-          commands:
-            - npm start
+            - echo "Cleaning up containers"
+            - docker-compose -f docker-compose.prod.yml down
       artifacts:
-        baseDirectory: .
+        baseDirectory: dist
         files:
           - '**/*'
       cache:
