--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,10 @@
 FROM node:18-alpine
+RUN apk add --no-cache curl
 WORKDIR /app
 COPY package*.json ./
 RUN npm install --production
 COPY . .
 EXPOSE 3000
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:3000/api/health || exit 1
 CMD ["npm", "start"]
