--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,20 +1,28 @@
 version: '3.8'
 services:
   backend:
-    build: ./backend
-    ports:
-      - "3000:3000"
+    build: 
+      context: ./backend
+      dockerfile: Dockerfile
     environment:
       - NODE_ENV=production
       - MONGODB_URI=${MONGODB_URI}
       - JWT_SECRET=${JWT_SECRET}
       - CORS_ORIGIN=${CORS_ORIGIN}
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+      - PORT=3000
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   frontend:
     build: 
       context: ./frontend
+      dockerfile: Dockerfile
       args:
         - REACT_APP_API_URL=http://backend:3000
     ports:
@@ -23,6 +31,7 @@ services:
       - backend
     networks:
       - app-network
+
 networks:
   app-network:
     driver: bridge
