--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,14 @@
-FROM node:18-alpine
+FROM node:18-alpine as builder
 WORKDIR /app
+ARG REACT_APP_API_URL=http://localhost:3000
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run web
+RUN npm run web:build
+
 FROM nginx:alpine
-COPY --from=0 /app/web-build /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
