--- a/amplify.yml
+++ b/amplify.yml
@@ -6,8 +6,8 @@ applications:
         preBuild:
           commands:
             - echo "Installing Docker Compose"
-            - curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
-            - chmod +x /usr/local/bin/docker-compose
+            - sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
+            - sudo chmod +x /usr/local/bin/docker-compose
             - docker --version
             - docker-compose --version
         build:
