--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,11 +1,12 @@
 version: 1.0
-runtime: nodejs22
+runtime: nodejs18
 build:
   commands:
     build:
-      - cd backend && npm install --production
+      - npm install --production
 run:
-  command: cd backend && npm start
+  runtime-version: nodejs18
+  command: npm start
   network:
     port: 3000
     env: PORT
